--- a/common/ezo_pmp_duo.yaml
+++ b/common/ezo_pmp_duo.yaml
@@ -180,6 +180,7 @@ sensor:
       device_class: 'volume'
       state_class: total
       unit_of_measurement: 'mL'
+      disabled_by_default: true
       web_server:
         sorting_group_id: sorting_group_pump_green
   - platform: ezo_pmp
@@ -191,6 +192,7 @@ sensor:
       device_class: 'volume'
       state_class: total
       unit_of_measurement: 'mL'
+      disabled_by_default: true
       web_server:
         sorting_group_id: sorting_group_pump_green
   - platform: ezo_pmp
@@ -200,6 +202,7 @@ sensor:
       name: Pump Clean - Max Volume/Time Flow Rate
       icon: mdi:car-speed-limiter
       unit_of_measurement: 'mL/min'
+      disabled_by_default: true
       web_server:
         sorting_group_id: sorting_group_pump_green
   - platform: ezo_pmp
@@ -244,6 +247,7 @@ sensor:
       icon: mdi:timer-sand-full
       device_class: 'volume'
       state_class: total
+      disabled_by_default: true
       unit_of_measurement: 'mL'
       web_server:
         sorting_group_id: sorting_group_pump_red
@@ -256,6 +260,7 @@ sensor:
       state_class: total
       device_class: 'volume'
       unit_of_measurement: 'mL'
+      disabled_by_default: true
       web_server:
         sorting_group_id: sorting_group_pump_red
   - platform: ezo_pmp
@@ -265,6 +270,7 @@ sensor:
       name: Pump Waste - Max Volume/Time Flow Rate
       icon: mdi:car-speed-limiter
       unit_of_measurement: 'mL/min'
+      disabled_by_default: true
       web_server:
         sorting_group_id: sorting_group_pump_red
   - platform: ezo_pmp
@@ -332,7 +338,7 @@ text_sensor:
     calibration_status:
       id: calibration_status_clean
       name: Pump Clean - Calibration Status
-      # disabled_by_default: true
+      disabled_by_default: true
       icon: mdi:tape-measure
       web_server:
         sorting_group_id: sorting_group_pump_green
@@ -351,7 +357,7 @@ text_sensor:
     calibration_status:
       id: calibration_status_waste
       name: Pump Waste - Calibration Status
-      # disabled_by_default: true
+      disabled_by_default: true
       icon: mdi:tape-measure
       web_server:
         sorting_group_id: sorting_group_pump_red
@@ -513,6 +519,7 @@ button:
     name: Pump Clean - Clear Total Volume Dosed
     icon: mdi:backspace
     id: dose_clear_clean
+    disabled_by_default: true
     on_press:
       - ezo_pmp.clear_total_volume_dosed:
           id: ezo_pump_green
@@ -533,6 +540,7 @@ button:
     name: Pump Clean - Clear Calibration Volume
     icon: mdi:cancel
     id: dose_calibrate_volume_clear_clean
+    disabled_by_default: true
     on_press:
       - ezo_pmp.clear_calibration:
           id: ezo_pump_green
@@ -607,6 +615,7 @@ button:
   - platform: template
     name: Pump Waste - Clear Total Volume Dosed
     icon: mdi:backspace
+    disabled_by_default: true
     id: dose_clear_waste
     on_press:
       - ezo_pmp.clear_total_volume_dosed:
@@ -626,6 +635,7 @@ button:
       sorting_group_id: sorting_group_pump_red
   - platform: template
     name: Pump Waste - Clear Calibration Volume
+    disabled_by_default: true
     icon: mdi:cancel
     id: dose_calibrate_volume_clear_waste
     on_press:
