added stl models

--- a/common/binary.yaml
+++ b/common/binary.yaml
@@ -1,6 +1,6 @@
 substitutions:
   binary_1: "13" # yellow
-  leak_sensor: "27" # blue -> red (and connect to GND)
+  leak_sensor: "27" # blue -> red (and connect GND Green -> Black  )
 
 binary_sensor:
   - platform: gpio
