--- a/common/ezo_commands.yaml
+++ b/common/ezo_commands.yaml
@@ -4,16 +4,17 @@ substitutions:
   addPMP_alt1: "108" # Waste/Red
   addPMP_alt2: "109" # Clean/Green
   addPMP_alt3: "110" #Orange
+  addPMP_alt4: "106" # Blue
 
 button:
   # Change I2C Address of EZO-PMP
   - platform: template
-    name: "Pump(Blue) -> ${addPMP_default} - Change I2C Address"
+    name: "Pump(Blue) -> ${addPMP_alt4} - Change I2C Address"
     on_press:
         then:
         - ezo_pmp.change_i2c_address:
             id: ezo_pump_white
-            address: ${addPMP_default}
+            address: ${addPMP_alt4}
     web_server:
       sorting_group_id: sorting_group_config
 
