--- a/common/ezo_commands.yaml
+++ b/common/ezo_commands.yaml
@@ -1,49 +1,59 @@
 substitutions:
-  # PMP circuit, who's default address is 103
-  addPMP_default: "103" #White
-  addPMP_alt1: "108" # Waste/Red
-  addPMP_alt2: "109" # Clean/Green
-  addPMP_alt3: "110" #Orange
-  addPMP_alt4: "106" # Blue
+  # # PMP circuit, who's default address is 103
+  # addPMP_default: "103" #White
+  # addPMP_alt1: "108" # Waste/Red
+  # addPMP_alt2: "109" # Clean/Green
+  # addPMP_alt3: "110" #Orange
+  # addPMP_alt4: "106" # Blue
 
 button:
   # Change I2C Address of EZO-PMP
   - platform: template
-    name: "Pump(Blue) -> ${addPMP_alt4} - Change I2C Address"
+    name: "Pump(Blue) -> ${addPMP_blue} - Change I2C Address"
     on_press:
         then:
         - ezo_pmp.change_i2c_address:
             id: ezo_pump_white
-            address: ${addPMP_alt4}
+            address: ${addPMP_blue}
     web_server:
       sorting_group_id: sorting_group_config
 
   - platform: template
-    name: "Pump(Red) -> ${addPMP_alt1} - Change I2C Address"
+    name: "Pump(Yellow) -> ${addPMP_yellow} - Change I2C Address"
     on_press:
         then:
         - ezo_pmp.change_i2c_address:
             id: ezo_pump_white
-            address: ${addPMP_alt1}
+            address: ${addPMP_yellow}
     web_server:
       sorting_group_id: sorting_group_config
 
   - platform: template
-    name: "Pump(Green) -> ${addPMP_alt2} - Change I2C Address"
+    name: "Pump(Red) -> ${addPMP_red} - Change I2C Address"
     on_press:
         then:
         - ezo_pmp.change_i2c_address:
             id: ezo_pump_white
-            address: ${addPMP_alt2}
+            address: ${addPMP_red}
     web_server:
       sorting_group_id: sorting_group_config
 
   - platform: template
-    name: "Pump(Orange) -> ${addPMP_alt3} - Change I2C Address"
+    name: "Pump(Green) -> ${addPMP_green} - Change I2C Address"
     on_press:
         then:
         - ezo_pmp.change_i2c_address:
             id: ezo_pump_white
-            address: ${addPMP_alt3}
+            address: ${addPMP_green}
+    web_server:
+      sorting_group_id: sorting_group_config
+
+  - platform: template
+    name: "Pump(Orange) -> ${addPMP_orange} - Change I2C Address"
+    on_press:
+        then:
+        - ezo_pmp.change_i2c_address:
+            id: ezo_pump_white
+            address: ${addPMP_orange}
     web_server:
       sorting_group_id: sorting_group_config
