--- a/common/ezo_pmp_blue.yaml
+++ b/common/ezo_pmp_blue.yaml
@@ -1,180 +1,177 @@
 substitutions:
   # PMP circuit
-  addPMP_white: "103" # White
-  update_pmp_white: "60s"
-
-  sorting_group_pump_white_weight: '80'
+  addPMP_blue: "104" # blue
+  update_pmp_blue: "60s"  
+  sorting_group_pump_blue_weight: '83'
 
 web_server:
   sorting_groups:
-    - id: sorting_group_pump_white
-      name: "Pump - White"
-      sorting_weight: ${sorting_group_pump_white_weight}
+    - id: sorting_group_pump_blue
+      name: "Pump - Blue"
+      sorting_weight: ${sorting_group_pump_blue_weight}
 
 ezo_pmp:
-  - id: ezo_pump_white
-    address: ${addPMP_white}
-    update_interval: "${update_pmp_white}"
+  - id: ezo_pump_blue
+    address: ${addPMP_blue}
+    update_interval: "${update_pmp_blue}"
 
 api:
   actions: 
-    - action: pump_white_dose_volume
+    - action: pump_blue_dose_volume
       variables: 
         dose_volume: float
       then: 
         - ezo_pmp.dose_volume:
-            id: ezo_pump_white
+            id: ezo_pump_blue
             volume: !lambda 'return dose_volume;'
-    - action: pump_white_dose_volume_time
+    - action: pump_blue_dose_volume_time
       variables:
         dose_volume: float
         dose_time: float
       then:
         - ezo_pmp.dose_volume_over_time:
-            id: ezo_pump_white
+            id: ezo_pump_blue
             volume: !lambda |-
               return dose_volume;
             duration: !lambda |-
               return dose_time;
-    - action: pump_white_dose_flow_rate_time
+    - action: pump_blue_dose_flow_rate_time
       variables:
         dose_rate: float
         dose_time: float
       then:
         - ezo_pmp.dose_with_constant_flow_rate:
-            id: ezo_pump_white
+            id: ezo_pump_blue
             volume_per_minute: !lambda |-
               return dose_rate;
             duration: !lambda |-
               return dose_time;
-    - action: pump_white_dose_set_calibration
+    - action: pump_blue_dose_set_calibration
       variables:
         actual_volume: float
       then:
         - ezo_pmp.set_calibration_volume:
-            id: ezo_pump_white
+            id: ezo_pump_blue
             volume: !lambda |-
               return actual_volume;
-    - action: pump_white_change_address
+    - action: pump_blue_change_address
       variables:
         address: int
       then:
         - ezo_pmp.change_i2c_address:
-            id: ezo_pump_white
+            id: ezo_pump_blue
             address: !lambda |-
               return address;
-
+              
 sensor:
   - platform: ezo_pmp
-    id: ezo_pump_white
+    id: ezo_pump_blue
     current_volume_dosed:
-      id: current_volume_dosed
-      name: Pump White - Current Volume Dosed
+      id: current_volume_dosed_2
+      name: Pump Blue - Current Volume Dosed
       icon: mdi:cube-scan
       device_class: 'volume'
-      unit_of_measurement: 'mL'
       state_class: total
+      unit_of_measurement: 'mL'
       web_server:
-        sorting_group_id: sorting_group_pump_white
+        sorting_group_id: sorting_group_pump_blue
   - platform: ezo_pmp
-    id: ezo_pump_white
+    id: ezo_pump_blue
     total_volume_dosed:
-      id: total_volume_dosed
-      name: Pump White - Total Volume Dosed
+      id: total_volume_dosed_2
+      name: Pump Blue - Total Volume Dosed
       icon: mdi:timer-sand-empty
       device_class: 'volume'
       unit_of_measurement: 'mL'
       disabled_by_default: true
       web_server:
-        sorting_group_id: sorting_group_pump_white
+        sorting_group_id: sorting_group_pump_blue
   - platform: ezo_pmp
-    id: ezo_pump_white
+    id: ezo_pump_blue
     absolute_total_volume_dosed:
-      id: absolute_total_volume_dosed
-      disabled_by_default: true
-      name: Pump White - Absolute Total Volume Dosed
+      id: absolute_total_volume_dosed_2
+      name: Pump Blue - Absolute Total Volume Dosed
       icon: mdi:timer-sand-full
-      device_class: 'volume'
-      state_class: total
-      unit_of_measurement: 'mL'
-      web_server:
-        sorting_group_id: sorting_group_pump_white
-  - platform: ezo_pmp
-    id: ezo_pump_white
-    last_volume_requested:
-      id: last_volume_requested
-      name: Pump White - Last Volume Requested
-      icon: mdi:history
       disabled_by_default: true
       device_class: 'volume'
       state_class: total
       unit_of_measurement: 'mL'
       web_server:
-        sorting_group_id: sorting_group_pump_white
+        sorting_group_id: sorting_group_pump_blue
   - platform: ezo_pmp
-    id: ezo_pump_white
+    id: ezo_pump_blue
+    last_volume_requested:
+      id: last_volume_requested_2
+      name: Pump Blue - Last Volume Requested
+      icon: mdi:history
+      device_class: 'volume'
+      disabled_by_default: true
+      state_class: total
+      unit_of_measurement: 'mL'
+      web_server:
+        sorting_group_id: sorting_group_pump_blue
+  - platform: ezo_pmp
+    id: ezo_pump_blue
     max_flow_rate:
-      id: max_flow_rate
-      name: Pump White - Max Volume/Time Flow Rate
+      id: max_flow_rate_2
+      name: Pump Blue - Max Volume/Time Flow Rate
       icon: mdi:car-speed-limiter
       disabled_by_default: true
       unit_of_measurement: 'mL/min'
       web_server:
-        sorting_group_id: sorting_group_pump_white
+        sorting_group_id: sorting_group_pump_blue
   - platform: ezo_pmp
-    id: ezo_pump_white
+    id: ezo_pump_blue
     pump_voltage:
-      id: pump_white_voltage
-      name: Pump White - Voltage
-      icon: mdi:lightning-bolt-circle
+      id: pump_blue_voltage
+      name: Pump Blue - Voltage
       disabled_by_default: true
+      icon: mdi:lightning-bolt-circle
       device_class: 'voltage'
       web_server:
-        sorting_group_id: sorting_group_pump_white
+        sorting_group_id: sorting_group_pump_blue
 
 binary_sensor:
   - platform: ezo_pmp
-    id: ezo_pump_white
+    id: ezo_pump_blue
     pump_state:
-      id: pump_white_state
-      name: Pump White - State
-      icon: mdi:pump
-      web_server:
-        sorting_group_id: sorting_group_pump_white
+      id: pump_blue_state
+      name: Pump Blue - State
+      icon: mdi:pump_blue
   - platform: ezo_pmp
-    id: ezo_pump_white
+    id: ezo_pump_blue
     is_paused:
-      id: is_paused
-      name: Pump White - Paused Status
-      disabled_by_default: true
+      id: is_paused_2
+      name: Pump Blue - Paused Status
       icon: mdi:pause
+      disabled_by_default: true
       web_server:
-        sorting_group_id: sorting_group_pump_white
+        sorting_group_id: sorting_group_pump_blue
 
 text_sensor:
   - platform: ezo_pmp
-    id: ezo_pump_white
+    id: ezo_pump_blue
     dosing_mode:
-      id: dosing_mode
-      name: Pump White - Dosing Mode 
+      id: dosing_mode_2
+      name: Pump Blue - Dosing Mode 
       icon: mdi:auto-mode
       web_server:
-        sorting_group_id: sorting_group_pump_white
+        sorting_group_id: sorting_group_pump_blue
   - platform: ezo_pmp
-    id: ezo_pump_white
+    id: ezo_pump_blue
     calibration_status:
-      id: calibration_status
-      name: Pump White - Calibration Status
+      id: calibration_status_2
+      name: Pump Blue - Calibration Status
       disabled_by_default: true
       icon: mdi:tape-measure
       web_server:
-        sorting_group_id: sorting_group_pump_white
+        sorting_group_id: sorting_group_pump_blue
 
 number:
   - platform: template
-    id: volume
-    icon: mdi:pump
-    name: Pump White - Volume to Dose
+    id: volume_2
+    icon: mdi:pump_blue
+    name: Pump Blue - Volume to Dose
     device_class: 'volume'
     unit_of_measurement: 'mL'
     optimistic: true
@@ -183,12 +180,12 @@ number:
     max_value: 378541 # 100 gal
     mode: box
     step: 0.1
-    web_server:
-      sorting_group_id: sorting_group_pump_white
+      web_server:
+        sorting_group_id: sorting_group_pump_blue
   - platform: template
-    id: duration
+    id: duration_2
     icon: mdi:timer
-    name: Pump White - Time to Dose
+    name: Pump Blue - Time to Dose
     device_class: 'duration'
     unit_of_measurement: 'min'
     optimistic: true
@@ -197,12 +194,12 @@ number:
     max_value: 1440 # 24 hours
     mode: box
     step: 0.1
-    web_server:
-      sorting_group_id: sorting_group_pump_white
+      web_server:
+        sorting_group_id: sorting_group_pump_blue
   - platform: template
-    id: flow_rate
+    id: flow_rate_2
     icon: mdi:waves-arrow-right
-    name: Pump White - Volume/Time Flow Rate
+    name: Pump Blue - Volume/Time Flow Rate
     unit_of_measurement: 'mL/min'
     optimistic: true
     initial_value: 10
@@ -210,104 +207,104 @@ number:
     max_value: 105 # may need to lower to 40
     mode: box
     step: 0.1
-    web_server:
-      sorting_group_id: sorting_group_pump_white
+      web_server:
+        sorting_group_id: sorting_group_pump_blue
 
 button:
   - platform: template
-    name: Pump White - Dose Volume for Time
+    name: Pump Blue - Dose Volume for Time
     icon: mdi:clock-time-two-outline
-    id: dose_over_time
+    id: dose_over_time_2
     on_press:
       - ezo_pmp.dose_volume_over_time:
-          id: ezo_pump_white
+          id: ezo_pump_blue
           volume: !lambda |-
             return id(volume).state;
           duration: !lambda |-
             return id(duration).state;
-    web_server:
-      sorting_group_id: sorting_group_pump_white
+      web_server:
+        sorting_group_id: sorting_group_pump_blue
   - platform: template
-    name: Pump White - Dose Continuously
+    name: Pump Blue - Dose Continuously
     icon: mdi:infinity
-    id: dose_continuously
+    id: dose_continuously_2
     on_press:
       - ezo_pmp.dose_continuously:
-          id: ezo_pump_white
-    web_server:
-      sorting_group_id: sorting_group_pump_white
+          id: ezo_pump_blue
+      web_server:
+        sorting_group_id: sorting_group_pump_blue
   - platform: template
-    name: Pump White - Dose Volume
-    icon: mdi:pump
-    id: dose_volume
+    name: Pump Blue - Dose Volume
+    icon: mdi:pump_blue
+    id: dose_volume_2
     on_press:
       - ezo_pmp.dose_volume:
-          id: ezo_pump_white
+          id: ezo_pump_blue
           volume: !lambda |-
             return id(volume).state;
-    web_server:
-      sorting_group_id: sorting_group_pump_white
+      web_server:
+        sorting_group_id: sorting_group_pump_blue
   - platform: template
-    name: Pump White - Dose at Volume/Time Flow Rate for Time
+    name: Pump Blue - Dose at Volume/Time Flow Rate for Time
     icon: mdi:format-text-wrapping-overflow
-    id: dose_flow_rate
+    id: dose_flow_rate_2
     on_press:
       - ezo_pmp.dose_with_constant_flow_rate:
-          id: ezo_pump_white
+          id: ezo_pump_blue
           volume_per_minute: !lambda |-
             return id(flow_rate).state;
           duration: !lambda |-
             return id(duration).state;
-    web_server:
-      sorting_group_id: sorting_group_pump_white
+      web_server:
+        sorting_group_id: sorting_group_pump_blue
   - platform: template
-    name: Pump White - Pause Dosing
+    name: Pump Blue - Pause Dosing
     icon: mdi:pause
-    id: dose_pause
+    id: dose_pause_2
     on_press:
       - ezo_pmp.pause_dosing:
-          id: ezo_pump_white
-    web_server:
-      sorting_group_id: sorting_group_pump_white
+          id: ezo_pump_blue
+      web_server:
+        sorting_group_id: sorting_group_pump_blue
   - platform: template
-    name: Pump White - Stop Dosing
+    name: Pump Blue - Stop Dosing
     icon: mdi:stop
-    id: dose_stop
+    id: dose_stop_2
     on_press:
       - ezo_pmp.stop_dosing:
-          id: ezo_pump_white
-    web_server:
-      sorting_group_id: sorting_group_pump_white
+          id: ezo_pump_blue
+      web_server:
+        sorting_group_id: sorting_group_pump_blue
   - platform: template
-    name: Pump White - Clear Total Volume Dosed
+    name: Pump Blue - Clear Total Volume Dosed
     disabled_by_default: true
     icon: mdi:backspace
-    id: dose_clear
+    id: dose_clear_2
     on_press:
       - ezo_pmp.clear_total_volume_dosed:
-          id: ezo_pump_white
-    web_server:
-      sorting_group_id: sorting_group_pump_white
+          id: ezo_pump_blue
+      web_server:
+        sorting_group_id: sorting_group_pump_blue
 
   # Calibrate
   - platform: template
-    name: Pump White - Set Calibration Volume
+    name: Pump Blue - Set Calibration Volume
     icon: mdi:tape-measure
-    id: dose_calibrate_volume
+    id: dose_calibrate_volume_2
     on_press:
       - ezo_pmp.set_calibration_volume:
-          id: ezo_pump_white
+          id: ezo_pump_blue
           volume: !lambda |-
             return id(volume).state;
-    web_server:
-      sorting_group_id: sorting_group_pump_white
+      web_server:
+        sorting_group_id: sorting_group_pump_blue
   - platform: template
-    name: Pump White - Clear Calibration Volume
-    icon: mdi:cancel
+    name: Pump Blue - Clear Calibration Volume
     disabled_by_default: true
-    id: dose_calibrate_volume_clear
+    icon: mdi:cancel
+    id: dose_calibrate_volume_clear_2
     on_press:
       - ezo_pmp.clear_calibration:
-          id: ezo_pump_white
-    web_server:
-      sorting_group_id: sorting_group_pump_white
+          id: ezo_pump_blue
+      web_server:
+        sorting_group_id: sorting_group_pump_blue
