--- a/static/_config.yml
+++ b/static/_config.yml
@@ -1,5 +1,5 @@
 title: AquaPi for ESPHome
-logo: assests/AquaPiLogo_small.png
+logo: assets/AquaPiLogo_small.png
 description: Powered by HomeAssistant & ESPHome
 show_downloads: false
 google_analytics: G-BPGR2QSCVL
