--- a/static/_config.yml
+++ b/static/_config.yml
@@ -1,5 +1,5 @@
 title: AquaPi for ESPHome
-logo: assets/image/AquaPi Logo Blue.png
+logo: assets/image/AquaPi Logo Blue.ico
 description: Powered by HomeAssistant & ESPHome
 show_downloads: false
 google_analytics: G-BPGR2QSCVL
