--- a/common/ezo_pmp_orange.yaml
+++ b/common/ezo_pmp_orange.yaml
@@ -67,7 +67,7 @@ sensor:
   - platform: ezo_pmp
     id: ezo_pump_orange
     current_volume_dosed:
-      id: current_volume_dosed_2
+      id: current_volume_dosed_orange
       name: Pump Orange - Current Volume Dosed
       icon: mdi:cube-scan
       device_class: 'volume'
@@ -78,7 +78,7 @@ sensor:
   - platform: ezo_pmp
     id: ezo_pump_orange
     total_volume_dosed:
-      id: total_volume_dosed_2
+      id: total_volume_dosed_orange
       name: Pump Orange - Total Volume Dosed
       icon: mdi:timer-sand-empty
       device_class: 'volume'
@@ -89,7 +89,7 @@ sensor:
   - platform: ezo_pmp
     id: ezo_pump_orange
     absolute_total_volume_dosed:
-      id: absolute_total_volume_dosed_2
+      id: absolute_total_volume_dosed_orange
       name: Pump Orange - Absolute Total Volume Dosed
       icon: mdi:timer-sand-full
       disabled_by_default: true
@@ -101,7 +101,7 @@ sensor:
   - platform: ezo_pmp
     id: ezo_pump_orange
     last_volume_requested:
-      id: last_volume_requested_2
+      id: last_volume_requested_orange
       name: Pump Orange - Last Volume Requested
       icon: mdi:history
       device_class: 'volume'
@@ -113,7 +113,7 @@ sensor:
   - platform: ezo_pmp
     id: ezo_pump_orange
     max_flow_rate:
-      id: max_flow_rate_2
+      id: max_flow_rate_orange
       name: Pump Orange - Max Volume/Time Flow Rate
       icon: mdi:car-speed-limiter
       disabled_by_default: true
@@ -141,7 +141,7 @@ binary_sensor:
   - platform: ezo_pmp
     id: ezo_pump_orange
     is_paused:
-      id: is_paused_2
+      id: is_paused_orange
       name: Pump Orange - Paused Status
       icon: mdi:pause
       disabled_by_default: true
@@ -152,7 +152,7 @@ text_sensor:
   - platform: ezo_pmp
     id: ezo_pump_orange
     dosing_mode:
-      id: dosing_mode_2
+      id: dosing_mode_orange
       name: Pump Orange - Dosing Mode 
       icon: mdi:auto-mode
       web_server:
@@ -160,7 +160,7 @@ text_sensor:
   - platform: ezo_pmp
     id: ezo_pump_orange
     calibration_status:
-      id: calibration_status_2
+      id: calibration_status_orange
       name: Pump Orange - Calibration Status
       disabled_by_default: true
       icon: mdi:tape-measure
@@ -169,7 +169,7 @@ text_sensor:
 
 number:
   - platform: template
-    id: volume_2
+    id: volume_orange
     icon: mdi:pump_orange
     name: Pump Orange - Volume to Dose
     device_class: 'volume'
@@ -180,10 +180,10 @@ number:
     max_value: 378541 # 100 gal
     mode: box
     step: 0.1
-      web_server:
-        sorting_group_id: sorting_group_pump_orange
+    web_server:
+      sorting_group_id: sorting_group_pump_orange
   - platform: template
-    id: duration_2
+    id: duration_orange
     icon: mdi:timer
     name: Pump Orange - Time to Dose
     device_class: 'duration'
@@ -194,10 +194,10 @@ number:
     max_value: 1440 # 24 hours
     mode: box
     step: 0.1
-      web_server:
-        sorting_group_id: sorting_group_pump_orange
+    web_server:
+      sorting_group_id: sorting_group_pump_orange
   - platform: template
-    id: flow_rate_2
+    id: flow_rate_orange
     icon: mdi:waves-arrow-right
     name: Pump Orange - Volume/Time Flow Rate
     unit_of_measurement: 'mL/min'
@@ -207,104 +207,104 @@ number:
     max_value: 105 # may need to lower to 40
     mode: box
     step: 0.1
-      web_server:
-        sorting_group_id: sorting_group_pump_orange
+    web_server:
+      sorting_group_id: sorting_group_pump_orange
 
 button:
   - platform: template
     name: Pump Orange - Dose Volume for Time
     icon: mdi:clock-time-two-outline
-    id: dose_over_time_2
+    id: dose_over_time_orange
     on_press:
       - ezo_pmp.dose_volume_over_time:
           id: ezo_pump_orange
           volume: !lambda |-
-            return id(volume).state;
+            return id(volume_orange).state;
           duration: !lambda |-
-            return id(duration).state;
-      web_server:
-        sorting_group_id: sorting_group_pump_orange
+            return id(duration_orange).state;
+    web_server:
+      sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump Orange - Dose Continuously
     icon: mdi:infinity
-    id: dose_continuously_2
+    id: dose_continuously_orange
     on_press:
       - ezo_pmp.dose_continuously:
           id: ezo_pump_orange
-      web_server:
-        sorting_group_id: sorting_group_pump_orange
+    web_server:
+      sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump Orange - Dose Volume
     icon: mdi:pump_orange
-    id: dose_volume_2
+    id: dose_volume_orange
     on_press:
       - ezo_pmp.dose_volume:
           id: ezo_pump_orange
           volume: !lambda |-
-            return id(volume).state;
-      web_server:
-        sorting_group_id: sorting_group_pump_orange
+            return id(volume_orange).state;
+    web_server:
+      sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump Orange - Dose at Volume/Time Flow Rate for Time
     icon: mdi:format-text-wrapping-overflow
-    id: dose_flow_rate_2
+    id: dose_flow_rate_orange
     on_press:
       - ezo_pmp.dose_with_constant_flow_rate:
           id: ezo_pump_orange
           volume_per_minute: !lambda |-
-            return id(flow_rate).state;
+            return id(flow_rate_orange).state;
           duration: !lambda |-
-            return id(duration).state;
-      web_server:
-        sorting_group_id: sorting_group_pump_orange
+            return id(duration_orange).state;
+    web_server:
+      sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump Orange - Pause Dosing
     icon: mdi:pause
-    id: dose_pause_2
+    id: dose_pause_orange
     on_press:
       - ezo_pmp.pause_dosing:
           id: ezo_pump_orange
-      web_server:
-        sorting_group_id: sorting_group_pump_orange
+    web_server:
+      sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump Orange - Stop Dosing
     icon: mdi:stop
-    id: dose_stop_2
+    id: dose_stop_orange
     on_press:
       - ezo_pmp.stop_dosing:
           id: ezo_pump_orange
-      web_server:
-        sorting_group_id: sorting_group_pump_orange
+    web_server:
+      sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump Orange - Clear Total Volume Dosed
     disabled_by_default: true
     icon: mdi:backspace
-    id: dose_clear_2
+    id: dose_clear_orange
     on_press:
       - ezo_pmp.clear_total_volume_dosed:
           id: ezo_pump_orange
-      web_server:
-        sorting_group_id: sorting_group_pump_orange
+    web_server:
+      sorting_group_id: sorting_group_pump_orange
 
   # Calibrate
   - platform: template
     name: Pump Orange - Set Calibration Volume
     icon: mdi:tape-measure
-    id: dose_calibrate_volume_2
+    id: dose_calibrate_volume_orange
     on_press:
       - ezo_pmp.set_calibration_volume:
           id: ezo_pump_orange
           volume: !lambda |-
-            return id(volume).state;
-      web_server:
-        sorting_group_id: sorting_group_pump_orange
+            return id(volume_orange).state;
+    web_server:
+      sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump Orange - Clear Calibration Volume
     disabled_by_default: true
     icon: mdi:cancel
-    id: dose_calibrate_volume_clear_2
+    id: dose_calibrate_volume_clear_orange
     on_press:
       - ezo_pmp.clear_calibration:
           id: ezo_pump_orange
-      web_server:
-        sorting_group_id: sorting_group_pump_orange
+    web_server:
+      sorting_group_id: sorting_group_pump_orange
