Set sensors and controls to disabled by default
Added 'disabled_by_default: true' to various sensors, binary sensors, text sensors, numbers, and buttons in ezo_co2.yaml, ezo_pmp.yaml, and ezo_pmp_duo.yaml to prevent them from being enabled automatically. Also bumped app_version to 25.6.2 in aquapi_config.yaml.

--- a/common/ezo_co2.yaml
+++ b/common/ezo_co2.yaml
@@ -47,6 +47,7 @@ sensor:
   - platform: ezo
     icon: mdi:molecule-co2
     name: "Carbon Dioxide"
+    disabled_by_default: true
     id: co2_ezo
     address: ${addCO2}
     unit_of_measurement: "ppm"
