--- a/common/ezo_pmp_duo.yaml
+++ b/common/ezo_pmp_duo.yaml
@@ -154,6 +154,7 @@ sensor:
     current_volume_dosed:
       id: current_volume_dosed_clean
       name: Pump Clean - Current Volume Dosed
+      disabled_by_default: true
       icon: mdi:cube-scan
       device_class: 'volume'
       state_class: total
@@ -222,6 +223,7 @@ sensor:
     current_volume_dosed:
       id: current_volume_dosed_waste
       name: Pump Waste - Current Volume Dosed
+      disabled_by_default: true
       icon: mdi:cube-scan
       device_class: 'volume'
       state_class: total
@@ -292,6 +294,7 @@ binary_sensor:
       id: pump_state_clean
       icon: mdi:pump
       name: Pump Clean - State
+      disabled_by_default: true
       web_server:
         sorting_group_id: sorting_group_pump_green
   - platform: ezo_pmp
@@ -311,6 +314,7 @@ binary_sensor:
       id: pump_state_waste
       icon: mdi:pump
       name: Pump Waste - State
+      disabled_by_default: true
       web_server:
         sorting_group_id: sorting_group_pump_red
   - platform: ezo_pmp
@@ -330,6 +334,7 @@ text_sensor:
     dosing_mode:
       id: dosing_mode_clean
       name: Pump Clean - Dosing Mode 
+      disabled_by_default: true
       icon: mdi:auto-mode
       web_server:
         sorting_group_id: sorting_group_pump_green
@@ -349,6 +354,7 @@ text_sensor:
     dosing_mode:
       id: dosing_mode_waste
       name: Pump Waste - Dosing Mode 
+      disabled_by_default: true
       icon: mdi:auto-mode
       web_server:
         sorting_group_id: sorting_group_pump_red
@@ -368,6 +374,7 @@ number:
     id: volume_clean
     icon: mdi:pump
     name: Pump Clean - Volume to Dose
+    disabled_by_default: true
     device_class: 'volume'
     unit_of_measurement: 'mL'
     optimistic: true
@@ -382,6 +389,7 @@ number:
     id: duration_clean
     icon: mdi:timer
     name: Pump Clean - Time to Dose
+    disabled_by_default: true
     device_class: 'duration'
     unit_of_measurement: 'min'
     optimistic: true
@@ -396,6 +404,7 @@ number:
     id: flow_rate_clean
     icon: mdi:waves-arrow-right
     name: Pump Clean - Volume/Time Flow Rate
+    disabled_by_default: true
     unit_of_measurement: 'mL/min'
     optimistic: true
     initial_value: 10
@@ -411,6 +420,7 @@ number:
     id: volume_waste
     icon: mdi:pump
     name: Pump Waste - Volume to Dose
+    disabled_by_default: true
     device_class: 'volume'
     unit_of_measurement: 'mL'
     optimistic: true
@@ -425,6 +435,7 @@ number:
     id: duration_waste
     icon: mdi:timer
     name: Pump Waste - Time to Dose
+    disabled_by_default: true
     device_class: 'duration'
     unit_of_measurement: 'min'
     optimistic: true
@@ -439,6 +450,7 @@ number:
     id: flow_rate_waste
     icon: mdi:waves-arrow-left
     name: Pump Waste - Volume/Time Flow Rate
+    disabled_by_default: true
     unit_of_measurement: 'mL/min'
     optimistic: true
     initial_value: 10
@@ -453,6 +465,7 @@ button:
   # Green
   - platform: template
     name: Pump Clean - Dose Volume for Time
+    disabled_by_default: true
     icon: mdi:clock-time-two-outline
     id: dose_over_time_clean
     on_press:
@@ -466,6 +479,7 @@ button:
       sorting_group_id: sorting_group_pump_green
   - platform: template
     name: Pump Clean - Dose Continuously
+    disabled_by_default: true
     icon: mdi:infinity
     id: dose_continuously_clean
     on_press:
@@ -475,6 +489,7 @@ button:
       sorting_group_id: sorting_group_pump_green
   - platform: template
     name: Pump Clean - Dose Volume
+    disabled_by_default: true
     icon: mdi:pump
     id: dose_volume_clean
     on_press:
@@ -486,6 +501,7 @@ button:
       sorting_group_id: sorting_group_pump_green
   - platform: template
     name: Pump Clean - Dose at Volume/Time Flow Rate for Time
+    disabled_by_default: true
     icon: mdi:format-text-wrapping-overflow
     id: dose_flow_rate_clean
     on_press:
@@ -499,6 +515,7 @@ button:
       sorting_group_id: sorting_group_pump_green
   - platform: template
     name: Pump Clean - Pause Dosing
+    disabled_by_default: true
     icon: mdi:pause
     id: dose_pause_clean
     on_press:
@@ -508,6 +525,7 @@ button:
       sorting_group_id: sorting_group_pump_green
   - platform: template
     name: Pump Clean - Stop Dosing
+    disabled_by_default: true
     icon: mdi:stop
     id: dose_stop_clean
     on_press:
@@ -517,6 +535,7 @@ button:
       sorting_group_id: sorting_group_pump_green
   - platform: template
     name: Pump Clean - Clear Total Volume Dosed
+    disabled_by_default: true
     icon: mdi:backspace
     id: dose_clear_clean
     disabled_by_default: true
@@ -527,6 +546,7 @@ button:
       sorting_group_id: sorting_group_pump_green
   - platform: template
     name: Pump Clean - Set Calibration Volume
+    disabled_by_default: true
     icon: mdi:tape-measure
     id: dose_calibrate_volume_clean
     on_press:
@@ -550,6 +570,7 @@ button:
   # Red
   - platform: template
     name: Pump Waste - Dose Volume for Time
+    disabled_by_default: true
     icon: mdi:clock-time-two-outline
     id: dose_over_time_waste
     on_press:
@@ -563,6 +584,7 @@ button:
       sorting_group_id: sorting_group_pump_red
   - platform: template
     name: Pump Waste - Dose Continuously
+    disabled_by_default: true
     icon: mdi:infinity
     id: dose_continuously_waste
     on_press:
@@ -572,6 +594,7 @@ button:
       sorting_group_id: sorting_group_pump_red
   - platform: template
     name: Pump Waste - Dose Volume
+    disabled_by_default: true
     icon: mdi:pump
     id: dose_volume_waste
     on_press:
@@ -583,6 +606,7 @@ button:
       sorting_group_id: sorting_group_pump_red
   - platform: template
     name: Pump Waste - Dose at Volume/Time Flow Rate for Time
+    disabled_by_default: true
     icon: mdi:format-text-wrapping-overflow
     id: dose_flow_rate_waste
     on_press:
@@ -596,6 +620,7 @@ button:
       sorting_group_id: sorting_group_pump_red
   - platform: template
     name: Pump Waste - Pause Dosing
+    disabled_by_default: true
     icon: mdi:pause
     id: dose_pause_waste
     on_press:
@@ -605,6 +630,7 @@ button:
       sorting_group_id: sorting_group_pump_red
   - platform: template
     name: Pump Waste - Stop Dosing
+    disabled_by_default: true
     icon: mdi:stop
     id: dose_stop_waste
     on_press:
@@ -624,6 +650,7 @@ button:
       sorting_group_id: sorting_group_pump_red
   - platform: template
     name: Pump Waste - Set Calibration Volume
+    disabled_by_default: true
     icon: mdi:tape-measure
     id: dose_calibrate_volume_waste
     on_press:
